==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Breaking Changes
================

Changes
=======

Fixes
=====

 - Fixed an issue that prevents CrateDB from bootstrap on Windows hosts.

 - Fixed an issue that caused queries with ``IS NULL`` or ``IS NOT NULL` on
   columns of type ``geo_point`` to fail.

 - Changed ``crate`` unix/linux startup script to use standard ``sh`` syntax
   instead of ``bash`` specific syntax.
